# Ilab_IK

./: .gitignore  .gitmodules  README.md
2Q_cache/: .gitignore  CMakeLists.txt  README.md  cache.hpp  main.cpp
2Q_cache/Unit_test/: README.md  unit_tests.cpp
2Q_cache/Unit_test/tests/: test12.txt
2q_cache/: .gitignore  Makefile  README.md  cache.hpp  main.cpp  unit_tests.cpp
2q_cache/Beladi/: CMakeLists.txt  Makefile  README.md  beladi.cpp  beladi.hpp
2q_cache/Unit_test/: CMakeLists.txt  Makefile  unit_tests.cpp
2q_cache/Unit_test/tests/: test13.txt  test5.txt
2q_cache/tests/: test6.txt  test7.txt
Beladi_cache/: CMakeLists.txt  README.md  beladi.cpp
OPENCLproj/: .gitignore  CMakeLists.txt  README.md
OPENCLproj/include/: app.hpp
OPENCLproj/sources/: app.cpp  bitonicSort.cl  generator.cpp  main.cpp  recBitonic.cl  testing.cpp
OPENCLproj/sources/kernels/: simple.cl
OPENCLproj/tests/: CMakeLists.txt  correctTesting.cpp  perfTesting.cpp  testing.cpp
OPENCLproj/tests/ans/: ftest1.ans  shtest1.ans  test3.ans  test4.ans
graph/: CMakeLists.txt
graph/include/: graph.hpp
graph/sources/: graph.cpp  main.cpp
matrix/: .clang-format  CMakeLists.txt  README.md
matrix/include/: matrix.hpp
matrix/sources/: main.cpp  test.cpp
matrix/tests/: complexMatrix.txt  complexMatrixTest1.txt  complexMatrixTest2.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  testmul1first.txt  testmul1second.txt  testmul2.txt  testmul2first.txt  testmul2second.txt
matrix/tests/answers/: ansComlex.txt  ansComplex.txt  ansmul1.txt  ansmul2.txt
tree/: README.md
triangles/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  octotree.hpp  triangles.hpp  vector.hpp
triangles/tests/: test1.txt  test4.txt
